--- a/admin.html
+++ b/admin.html
@@ -231,15 +231,34 @@ html,body{min-height:100%;background:var(--bg);color:var(--t);font-family:'Jost'
 // ══════════════════════════════════════════════════════════════════
 const ADMIN_PASSWORD = 'admin'; // Change this to your real password
 
-function login(){
+async function login(){
   const pw   = document.getElementById('inPw').value;
   const user = document.getElementById('inUser').value.trim();
-  const tok  = document.getElementById('inToken').value.trim();
+  const tok  = document.getElementById('inToken').value.trim().replace(/\s+/g,''); // strip any spaces/newlines
   const repo = document.getElementById('inRepo').value.trim();
   const err  = document.getElementById('loginErr');
+  const btn  = document.querySelector('.loginBtn');
 
-  if(pw !== ADMIN_PASSWORD){ err.style.display='block'; return; }
-  if(!user||!tok||!repo)   { err.style.display='block'; return; }
+  if(pw !== ADMIN_PASSWORD){
+    err.textContent='Wrong admin password.';err.style.display='block'; return;
+  }
+  if(!user||!tok||!repo){
+    err.textContent='Please fill in all fields.';err.style.display='block'; return;
+  }
+
+  btn.textContent='Checking…';btn.disabled=true;
+
+  // Test token against GitHub API before proceeding
+  try{
+    const r=await fetch(`https://api.github.com/repos/${repo}`,{
+      headers:{'Authorization':'Bearer '+tok,'Accept':'application/vnd.github+json','X-GitHub-Api-Version':'2022-11-28'}
+    });
+    if(r.status===401){err.textContent='Token rejected by GitHub — check it has repo scope.';err.style.display='block';btn.textContent='Sign in';btn.disabled=false;return;}
+    if(r.status===404){err.textContent='Repo "'+repo+'" not found — check the spelling (username/reponame).';err.style.display='block';btn.textContent='Sign in';btn.disabled=false;return;}
+    if(!r.ok){err.textContent='GitHub error '+r.status+' — try again.';err.style.display='block';btn.textContent='Sign in';btn.disabled=false;return;}
+  }catch(e){
+    err.textContent='Network error: '+e.message;err.style.display='block';btn.textContent='Sign in';btn.disabled=false;return;
+  }
 
   // Store in sessionStorage — gone when tab closes
   sessionStorage.setItem('gh_user', user);
@@ -247,6 +266,7 @@ function login(){
   sessionStorage.setItem('gh_repo', repo);
 
   err.style.display='none';
+  btn.textContent='Sign in';btn.disabled=false;
   document.getElementById('loginScreen').style.display='none';
   document.getElementById('app').style.display='block';
   initApp();
@@ -256,36 +276,36 @@ function gh(){ return { user: sessionStorage.getItem('gh_user'), token: sessionS
 
 // ══════════════════════════════════════════════════════════════════
 // GITHUB API helpers
+// Uses Bearer auth (works from any origin incl. GitHub Pages)
 // ══════════════════════════════════════════════════════════════════
+function ghHeaders(){
+  const {token}=gh();
+  return {
+    'Authorization': 'Bearer '+token,
+    'Accept': 'application/vnd.github+json',
+    'X-GitHub-Api-Version': '2022-11-28'
+  };
+}
 async function ghGet(path){
-  const {token,repo}=gh();
+  const {repo}=gh();
   const r=await fetch(`https://api.github.com/repos/${repo}/contents/${path}`,
-    {headers:{'Authorization':'token '+token,'Accept':'application/vnd.github.v3+json'}});
-  if(!r.ok) throw new Error('GET '+path+' → '+r.status);
+    {headers:ghHeaders()});
+  if(r.status===404) throw new Error('GET '+path+' → 404');
+  if(!r.ok){const e=await r.json().catch(()=>({}));throw new Error(e.message||'GET failed '+r.status);}
   return r.json();
 }
 async function ghPut(path, content, message, sha){
-  const {token,repo}=gh();
-  const body={message, content: btoa(unescape(encodeURIComponent(content)))};
+  const {repo}=gh();
+  // Encode UTF-8 string to base64 safely
+  const b64=btoa(encodeURIComponent(content).replace(/%([0-9A-F]{2})/g,(_,p)=>String.fromCharCode('0x'+p)));
+  const body={message, content: b64};
   if(sha) body.sha=sha;
   const r=await fetch(`https://api.github.com/repos/${repo}/contents/${path}`,{
     method:'PUT',
-    headers:{'Authorization':'token '+token,'Content-Type':'application/json','Accept':'application/vnd.github.v3+json'},
+    headers:{...ghHeaders(),'Content-Type':'application/json'},
     body:JSON.stringify(body)
   });
-  if(!r.ok){const e=await r.json();throw new Error(e.message||'PUT failed');}
-  return r.json();
-}
-async function ghPutBinary(path, base64Content, message, sha){
-  const {token,repo}=gh();
-  const body={message, content: base64Content};
-  if(sha) body.sha=sha;
-  const r=await fetch(`https://api.github.com/repos/${repo}/contents/${path}`,{
-    method:'PUT',
-    headers:{'Authorization':'token '+token,'Content-Type':'application/json','Accept':'application/vnd.github.v3+json'},
-    body:JSON.stringify(body)
-  });
-  if(!r.ok){const e=await r.json();throw new Error(e.message||'PUT binary failed');}
+  if(!r.ok){const e=await r.json().catch(()=>({}));throw new Error(e.message||'PUT failed '+r.status);}
   return r.json();
 }
 
