--- a/admin.html
+++ b/admin.html
@@ -86,8 +86,8 @@ html,body{min-height:100%;background:var(--bg);color:var(--t);font-family:'Jost'
 .calibRow label{font-size:11px;color:var(--m);width:90px;flex-shrink:0}
 .calibRow input[type=range]{flex:1;accent-color:var(--a)}
 .calibRow .cv{font-size:11px;color:var(--t);min-width:40px;text-align:right}
-.preview3d{width:100%;height:220px;border-radius:4px;overflow:hidden;background:#1a1814;position:relative;margin-top:4px}
-.preview3d canvas{width:100%;height:100%;display:block}
+.preview3d{width:100%;height:260px;border-radius:4px;overflow:hidden;background:#1a1814;position:relative;margin-top:4px}
+.preview3d canvas{display:block}
 .previewHint{position:absolute;bottom:10px;left:50%;transform:translateX(-50%);font-size:9px;color:rgba(255,255,255,.3);letter-spacing:.08em;pointer-events:none}
 
 /* Danger */
@@ -581,30 +581,35 @@ function initPreview(arrayBuffer){
   const canvas=document.getElementById('previewCanvas');
 
   function doSetup(){
-    const w=container.offsetWidth||480;
-    const h=220;
+    // Use actual pixel dimensions — don't let CSS scale the canvas
+    const w=container.offsetWidth||520;
+    const h=260;
     if(!prevRenderer){
-      prevRenderer=new THREE.WebGLRenderer({canvas,antialias:true});
-      prevRenderer.setPixelRatio(Math.min(window.devicePixelRatio,2));
-      prevRenderer.setSize(w,h,false);
-      prevRenderer.setClearColor(0x14110e,1);
+      prevRenderer=new THREE.WebGLRenderer({canvas,antialias:true,alpha:false});
+      prevRenderer.setPixelRatio(1); // keep 1:1 — retina makes it blurry in small preview
+      prevRenderer.setClearColor(0x15120e,1);
       prevScene=new THREE.Scene();
-      prevCamera=new THREE.PerspectiveCamera(46,w/h,.01,200);
-      // Lights
-      prevScene.add(new THREE.AmbientLight(0xfff0e0,.55));
-      const sun=new THREE.DirectionalLight(0xfff8e8,1.3);sun.position.set(5,10,7);prevScene.add(sun);
-      const fill=new THREE.DirectionalLight(0x8090b0,.25);fill.position.set(-5,2,-5);prevScene.add(fill);
-      // Ground grid
-      prevScene.add(new THREE.GridHelper(10,10,0x332e28,0x2a2620));
+      prevCamera=new THREE.PerspectiveCamera(50,w/h,.05,200);
+      // Lights — brighter so model is clearly visible
+      prevScene.add(new THREE.AmbientLight(0xffffff,.75));
+      const sun=new THREE.DirectionalLight(0xfff8e8,1.4);sun.position.set(4,8,6);prevScene.add(sun);
+      const fill=new THREE.DirectionalLight(0xc0d0ff,.3);fill.position.set(-6,2,-4);prevScene.add(fill);
+      const back=new THREE.DirectionalLight(0xffe8c0,.2);back.position.set(0,-4,0);prevScene.add(back);
+      // Ground grid — clearly visible reference plane
+      const grid=new THREE.GridHelper(14,14,0x4a4030,0x2e2820);prevScene.add(grid);
+      // Set canvas pixel size explicitly
+      prevRenderer.setSize(w,h,false);
+      canvas.style.width=w+'px';canvas.style.height=h+'px';
       // Resize observer
       new ResizeObserver(()=>{
-        const nw=container.offsetWidth;const nh=220;
-        if(!nw)return;
-        prevRenderer.setSize(nw,nh,false);
-        prevCamera.aspect=nw/nh;prevCamera.updateProjectionMatrix();
+        const nw=container.offsetWidth;
+        if(!nw||!prevRenderer)return;
+        prevRenderer.setSize(nw,h,false);
+        canvas.style.width=nw+'px';canvas.style.height=h+'px';
+        prevCamera.aspect=nw/h;prevCamera.updateProjectionMatrix();
       }).observe(container);
-      // Mouse orbit
-      canvas.addEventListener('mousedown',e=>{prevOrb.on=true;prevOrb.lx=e.clientX;prevOrb.ly=e.clientY;e.preventDefault();});
+      // Mouse orbit — left drag orbits
+      canvas.addEventListener('mousedown',e=>{prevOrb.on=true;prevOrb.lx=e.clientX;prevOrb.ly=e.clientY;e.preventDefault();},false);
       canvas.addEventListener('touchstart',e=>{const t=e.touches[0];prevOrb.on=true;prevOrb.lx=t.clientX;prevOrb.ly=t.clientY;},{passive:true});
       window.addEventListener('mousemove',e=>{
         if(!prevOrb.on)return;
@@ -634,19 +639,21 @@ function initPreview(arrayBuffer){
       const group=primsToPreviewMesh(prims);
       prevScene.add(group);previewModel=group;
       applyCalib();
-      // Auto-fit
+      // Auto-fit camera to model
       const box=new THREE.Box3().setFromObject(group);
       const sz=box.getSize(new THREE.Vector3()).length();
       const ctr=box.getCenter(new THREE.Vector3());
-      prevOrb.tx=ctr.x;prevOrb.ty=ctr.y;prevOrb.tz=ctr.z;
-      prevOrb.r=sz*1.7;prevOrb.ph=.9;prevOrb.th=.6;
+      // Sit model on grid: shift centre so bottom is at y=0
+      const minY=box.min.y;
+      group.position.y=-minY; // rest on grid
+      prevOrb.tx=ctr.x; prevOrb.ty=ctr.y-minY; prevOrb.tz=ctr.z;
+      prevOrb.r=sz*1.8; prevOrb.ph=.75; prevOrb.th=.5;
       updatePrevOrb();
     }catch(err){console.error('preview error',err);}
   }
 
-  // Wait for CSS to apply (container may be 0 if just made visible)
-  if(container.offsetWidth>0){doSetup();}
-  else{setTimeout(doSetup,50);}
+  // Wait two frames so container is laid out and has real offsetWidth
+  requestAnimationFrame(()=>requestAnimationFrame(doSetup));
 }
 
 function applyCalib(){
@@ -730,21 +737,44 @@ function loadGLBSimple(buf){
 }
 function primsToPreviewMesh(prims){
   const grp=new THREE.Group();
-  const tl=new THREE.TextureLoader();
-  // Centre + normalise
+  // Compute global bounding box for centering
   let mx=-Infinity,my=-Infinity,mz=-Infinity,nx=Infinity,ny=Infinity,nz=Infinity;
   prims.forEach(p=>{for(let i=0;i<p.pos.length;i+=3){nx=Math.min(nx,p.pos[i]);mx=Math.max(mx,p.pos[i]);ny=Math.min(ny,p.pos[i+1]);my=Math.max(my,p.pos[i+1]);nz=Math.min(nz,p.pos[i+2]);mz=Math.max(mz,p.pos[i+2]);}});
-  const cx=(mx+nx)/2,cy=(my+ny)/2,cz=(mz+nz)/2,sc=2/Math.max(mx-nx,my-ny,mz-nz,.001);
+  const cx=(mx+nx)/2,cy=(my+ny)/2,cz=(mz+nz)/2;
+  const sc=2.5/Math.max(mx-nx,my-ny,mz-nz,.001); // scale to ~2.5 units
   prims.forEach(({pos,nor,uv,idx,texUrl})=>{
     const gv=[],gn=[],gu=[];
-    const push=i=>{gv.push((pos[i*3]-cx)*sc,(pos[i*3+1]-cy)*sc,(pos[i*3+2]-cz)*sc);if(nor)gn.push(nor[i*3],nor[i*3+1],nor[i*3+2]);if(uv)gu.push(uv[i*2],uv[i*2+1]);};
-    if(idx)for(let i=0;i<idx.length;i++)push(idx[i]);else for(let i=0;i<pos.length/3;i++)push(i);
+    const push=i=>{
+      gv.push((pos[i*3]-cx)*sc,(pos[i*3+1]-cy)*sc,(pos[i*3+2]-cz)*sc);
+      if(nor)gn.push(nor[i*3],nor[i*3+1],nor[i*3+2]);
+      if(uv)gu.push(uv[i*2],uv[i*2+1]);
+    };
+    if(idx){for(let i=0;i<idx.length;i++)push(idx[i]);}
+    else{for(let i=0;i<pos.length/3;i++)push(i);}
     const geo=new THREE.BufferGeometry();
     geo.setAttribute('position',new THREE.Float32BufferAttribute(gv,3));
-    if(gn.length)geo.setAttribute('normal',new THREE.Float32BufferAttribute(gn,3));else geo.computeVertexNormals();
+    if(gn.length)geo.setAttribute('normal',new THREE.Float32BufferAttribute(gn,3));
+    else geo.computeVertexNormals();
     if(gu.length===(gv.length/3)*2)geo.setAttribute('uv',new THREE.Float32BufferAttribute(gu,2));
-    const mat=new THREE.MeshStandardMaterial({roughness:.7,metalness:.05,side:THREE.DoubleSide,color:texUrl?0xffffff:0xb0a898});
-    if(texUrl)tl.load(texUrl,t=>{t.flipY=false;mat.map=t;mat.needsUpdate=true;});
+    // Build material — textured if we have a blob URL, plain clay if not
+    const hasUV = gu.length===(gv.length/3)*2;
+    const mat=new THREE.MeshStandardMaterial({
+      roughness:.65, metalness:.04,
+      side:THREE.DoubleSide,
+      color: (texUrl&&hasUV) ? 0xffffff : 0xc8b89a
+    });
+    if(texUrl&&hasUV){
+      // Load texture from blob URL — created during GLB parse in same session
+      const img=new Image();
+      img.onload=()=>{
+        const tex=new THREE.Texture(img);
+        tex.flipY=false; // glTF spec
+        tex.needsUpdate=true;
+        mat.map=tex;
+        mat.needsUpdate=true;
+      };
+      img.src=texUrl;
+    }
     grp.add(new THREE.Mesh(geo,mat));
   });
   return grp;
